recursion.lessons.recursion.tree.Tree.scala.error
Tree:13: error: type mismatch;
 found   : Double
 required: Int
x=getX()
      ^Tree:14: error: type mismatch;
 found   : Double
 required: Int
y=getY()
      ^