recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
var s= steps
var l=length
var x:Int=0
var y:Int=0

current(s)
avance(l)
current(s-1)
droite(angle)
avance(l*shrink)
x=getX()
y=getY()
setPos(x,y)
gauche(angle)
gauche(angle)
avance(l*shrink)
//tree(s-1,l,angle,shrink)
}
